# Gestor-De-Biblioteca

./: CMakeLists.txt  Connection.cpp  GestorDBiblioteca.cpp  Ingresar_libros.cpp  Ingresar_libros.h  Listar_libros.cpp  Listar_libros.h  README.md  UserAuth.cpp  UserAuth.h  VentanasGUI.cpp  VentanasGUI.h  biblioteca.cpp  biblioteca.h  libros_prestados.cpp  libros_prestados.h  main.cpp  prestar_libros_v.cpp
include/GUI/: LoginDialog.h  MainWindow.h
src/GUI/: LoginDailog.cpp  MainWindow.cpp
